fix: change border-spacing

--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@ html {
 }
 
 .tabela {
-    border-spacing: 100px;
+    border-spacing: 50px;
 }
 
 .box {
